# ASCILAM

./: .gitignore  README.md  Timeline.md
Container/: INSTRUCTIONS.md
Container/.devcontainer/: Dockerfile  devcontainer.json
coordinator/: INSTRUCTIONS.md  sim_ld19p_udp.py
coordinator/ld19_udp_viz/: package.xml  setup.cfg  setup.py
coordinator/ld19_udp_viz/launch/: demo.launch.py
coordinator/ld19_udp_viz/ld19_udp_viz/: udp_ld19_receiver.py
esp32/: serial_test.cpp
mbot/: MBOT-ESP32_CONNECTION.md  serial_test.cpp
python_testing/: INSTRUCTIONS.md  requirements.txt
python_testing/ldlidar/esp32_integration/ld19lidar/: README.md
python_testing/ldlidar/esp32_integration/ld19lidar/include/: ld19_config.h  ld19_parser.h  ld19_reader.h  ld19_udp.h
python_testing/ldlidar/esp32_integration/ld19lidar/src/: format_serial_data.cpp  main.cpp  read_serial.cpp  udp_data_sender.cpp
python_testing/ldlidar/functionality_test/: data_visualizing.py  map_plot.py  serial_read_test.py  udp_2d_mapper.py  udp_ascii_mapper.py  udp_data_tester.py  udp_formatter_simple.py  udp_frame_parser.py  udp_receiver.py  udp_simple_plotter.py  udp_visualizer.py
python_testing/rplidar/: lidar_test.py
python_testing/udp_transmission/: lysia_udp.py  udp_sender.py  udp_test_receiver.py  udp_test_sender.py
ras_pi/: package.xml  setup.py
ras_pi/Launch/: multi_robot_launch.py
ras_pi/config/: ros2_foxy_setup.sh  setup_ros2_env.sh  setup_wifi_ap.sh
ras_pi/multirobot_nav/: multirobot_slam.py  robot_controller.py  robot_coordinator.py
